# plette-58

admin/: pyproject.toml
admin/myadmin/: __main__.py
