[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "myadmin"
version = "0.0.1"
requires-python = ">=3.11"
keywords = []
dependencies = []
classifiers = [
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
]
